keycloak/aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32000
    - name: https
      port: 8443
      targetPort: 8443
      nodePort: 34000
  selector:
    app: keycloak
  type: NodePort
